snippet collector throws if it does not find the end of the snippet jamal-test is a module and opens directives were added to the surefire execution